--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,31 @@
 body {
-    /* background-color: pink; */
+    height: 100vh;
+    width: 100vw;
+}
+
+.container {
+    width: 90vw;
+}
+
+.add-exercise-form {
+    width: 70vw;
+    margin: 0 auto;
+}
+
+form {
+    margin: 0 auto;
+}
+
+.view-btn {
+    margin-top: 1vh;
+    width: 15vmax;
+}
+
+.add-btn {
+    width: 15vmax;
+}
+
+.header {
+    margin-top: 6vh;
+    margin-bottom: 2vh;
 }
